# ctpdemo

./: CMakeLists.txt
cmake/: FindCTP.cmake
spec/: ftd.1.dtd  ftd.xml
src/: CMakeLists.txt  main.cpp  mdspi.cpp  mdspi.h
tools/: generate_encoder.rb
